--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- Start of Userlove Code Snippet -->
+<script>
+  var queue = []; function userloveq(method, args) { (!!userloveMethods && userloveMethods[method]) ? userloveMethods[method](args) : queue.push({ method: method, args: args }); } (function (l, o, v, e) { l["a_id"] = e; l["dm"] = l.location.hostname; l[v] = l[v] || []; if (l[o]) return; l[o] = {}; var s = document.createElement("script"); s.async = true; s.src = "https://cdn.userlove.dev/wrapper.dev.js?v=" + Date.now(); var t = document.getElementsByTagName("script")[0]; t.parentNode.insertBefore(s, t); })(window, "userloveMethods", "userloveDL", "5HOOSTJ282")
+</script>
+<!-- End of Userlove Code Snippet -->
   </head>
   <body style="margin: 0px;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
